Fikset bug i headeren ved å kopiere direkte fra stackoverflow

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -330,3 +330,44 @@ height:340px;
 Overflow-y: auto;
 Overflow-x: hidden;
 }
+
+/* Følgende er hentet fra stackoverflow for å fikse bug i headeren. Link: https://www.w3schools.com/cssref/css3_pr_mediaquery.asp */
+
+@media (max-width: 1150px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin: 7.5px -15px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .navbar-text {
+        float: none;
+        margin: 15px 0;
+    }
+    /* since 3.1.0 */
+    .navbar-collapse.collapse.in {
+        display: block!important;
+    }
+    .collapsing {
+        overflow: hidden!important;
+    }
+}
+
